--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,13 @@ Desktop.ini
 .eslintrc.js
 .stylelintcache
 stylelint.config.js
+
+# --- Frontend (Next.js) ---
+/frontend/.next/
+/frontend/node_modules/
+/frontend/out/
+/frontend/dist/
+/frontend/.env
+/frontend/.env.*  # .env.local, .env.production, etc.
+/frontend/.eslintcache
+/frontend/.turbo/
