--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.18.1",
     "jwt-decode": "^4.0.0",
     "next": "15.3.3",
     "react": "^19.0.0",
