--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,64 @@
-django
-djangorestframework
-python-decouple
-celery
-redis
-openai>=1.3.5
-pillow
-djangorestframework-simplejwt
-channels
-channels-redis
-dj-rest-auth
-django-allauth
-django-allauth[google,linkedin_oauth2]
-requests
-django-cors-headers
-cryptography>=42.0.0
+amqp==5.3.1
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+billiard==4.2.1
+cachetools==5.5.2
+celery==5.5.3
+certifi==2025.4.26
+cffi==1.17.1
+channels==4.2.2
+channels_redis==4.2.1
+charset-normalizer==3.4.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+cryptography==45.0.4
+defusedxml==0.7.1
+distro==1.9.0
+dj-rest-auth==7.0.1
+dj-rest-auth-social==2.2.4
+Django==5.2.2
+django-allauth==0.51.0
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
+google-auth==2.40.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+jiter==0.10.0
+kombu==5.5.4
+msgpack==1.1.0
+oauthlib==3.3.1
+openai==1.84.0
+packaging==25.0
+pillow==11.2.1
+prompt_toolkit==3.0.51
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.5
+pydantic_core==2.33.2
+PyJWT==2.9.0
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python3-openid==3.2.0
+redis==6.2.0
+requests==2.32.4
+requests-oauthlib==2.0.0
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+sqlparse==0.5.3
+stripe==12.3.0
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.13
