--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.18.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
